# candlepilot

./: .gitignore  PROJECT.md  README.md  config.example.yaml  pyproject.toml
src/candlepilot/: backtest.py  cli.py  config.py  engine.py  filters.py  indicators.py  logging_utils.py  models.py  oanda.py  reporting.py  risk.py  strategy.py  web.py
tests/: test_backtest.py  test_filters.py  test_indicators.py  test_reporting.py  test_risk.py  test_strategy.py
