[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "candlepilot"
version = "0.1.0"
description = "A minimal, auditable candle-based trading bot for OANDA demo accounts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32.0",
  "pydantic>=2.7.0",
  "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
candlepilot = "candlepilot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
